--- a/index.html
+++ b/index.html
@@ -21,20 +21,30 @@
             <h3 class="about subtitle">About</h3>
             <p id="tribute-info" class="content"><span class="red-name">John Anthony 'Jack'
                     White</span> (born July
-                9, 1975) Lorem
-                ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-                culpa qui officia deserunt mollit anim id est laborum. Read more about Jack's life <a id="tribute-link"
+                9, 1975) He was a fan of classical music as a child but in elementary school he started to listen to 60s
+                rock and blues which
+                would later influence him in the White Stripes. In 2005 Jack reported that prior to attending high
+                school he was
+                accepted into a Catholic seminary and had planned to become a priest, but abandoned this plan at the
+                last minute because
+                he had just gotten a new amplifier and didn’t think we was allowed to take it with him. Instead he
+                attended a public
+                high school where he played drums and trombone in the school band. There he also formed his first band
+                and experimented
+                with analog equipment and the associated working methods. Jack is known to be an eccentric type and has
+                a history of
+                creating mythology around his life events and circumstances. He lives in Nashville, Tennessee. Read more
+                about Jack's life<a id="tribute-link"
                     class="link" target="_blank" href="https://en.wikipedia.org/wiki/Jack_White">here.</a> </p>
             <p class="about-paragraph content"><span class="red-name">Megan Martha 'Meg' White</span> (born December 10,
-                1974)
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-                culpa qui officia deserunt mollit anim id est laborum. Read more about Meg's life <a class="link"
+                1974) grew up in a Detroit suburb. In high school she was viewed as a shy, artistic type who decided to
+                pursue a career as a chef rather than attending college. While working at a restaurant in Royal Oak,
+                Michigan she met Jack with whom she dated and eventually married on September 21, 1996. One day on a
+                whim Meg started playing Jack’s drumkit and so began the journey of embodying an integral part of what
+                became the iconic sound of the White Stripes. To this day she is known for her minimalistic, almost
+                primal yet childlike approach to playing the instrument. She is highly underrated as a drummer, as she
+                both distinctive and innovative in her approach. Although Meg is incredibly private and very little is
+                known about her whereabouts now, as of 2014 she still lived in Detroit. Read more about Meg's life <a class="link"
                     target="_blank" href="https://en.wikipedia.org/wiki/Meg_White">here.</a></p>
         </div>
         <div id="discography">
