--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <h3 class="about subtitle">About</h3>
             <p id="tribute-info" class="content"><span class="red-name">John Anthony 'Jack'
                     White</span> (born July
-                9, 1975) He was a fan of classical music as a child but in elementary school he started to listen to 60s
+                9, 1975) grew up in Detroit, Michigan. He was a fan of classical music as a child but in elementary school he started to listen to 60s
                 rock and blues which
                 would later influence him in the White Stripes. In 2005 Jack reported that prior to attending high
                 school he was
