Added opening html tag to document

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-
+<html>
 <head>
     <title>A Tribute to the White Stripes</title>
     <link href="./styles.css" rel="stylesheet" type="text/css">
